kubernetes/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: diplom-app
  labels:
    app: diplom-app
