kubernetes/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-service
  namespace: diplom-app
spec:
  selector:
    app: nginx-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
